Avoid creating duplicate files

BUG: 500241