addons/project/kateprojectviewtree.cpp
@@ -206,6 +206,10 @@ void KateProjectViewTree::addFile(const QModelIndex &idx, const QString &fileNam
 
     const QString base = idx.isValid() ? idx.data(Qt::UserRole).toString() : m_project->baseDir();
     const QString fullFileName = base + QLatin1Char('/') + fileName;
+    if (QFileInfo::exists(fullFileName)) {
+        Utils::showMessage(i18n("The file already exists"), QIcon(), i18n("Project"), MessageType::Error);
+        return;
+    }
 
     /**
      * Create an actual file on disk
@@ -240,6 +244,10 @@ void KateProjectViewTree::addDirectory(const QModelIndex &idx, const QString &na
 
     const QString base = idx.isValid() ? idx.data(Qt::UserRole).toString() : m_project->baseDir();
     const QString fullDirName = base + QLatin1Char('/') + name;
+    if (QFileInfo::exists(fullDirName)) {
+        Utils::showMessage(i18n("The directory already exists"), QIcon(), i18n("Project"), MessageType::Error);
+        return;
+    }
 
     QDir dir(base);
     if (!dir.mkdir(name)) {
